# Design-Patterns

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: build.yml
Behavioral/: CMakeLists.txt
Behavioral/ChainOfResponsibility/: CMakeLists.txt
Behavioral/ChainOfResponsibility/Handler/: CMakeLists.txt  Handler.cpp
Behavioral/CommandPattern/RemoteControl/: CMakeLists.txt  RemoteControl.cpp
Behavioral/Observer/Observer/: CMakeLists.txt  Observer.cpp
Behavioral/Strategy/: CMakeLists.txt  README.md
Behavioral/Strategy/ConcreteStrategy/: CMakeLists.txt  ConcreteStrategy.cpp
Behavioral/Visitor/: CMakeLists.txt
Behavioral/Visitor/ConcreteVisitor/: CMakeLists.txt  ConcreteVisitor.cpp
Creational/: CMakeLists.txt
Creational/AbstractFactory/: CMakeLists.txt  README.md
Creational/AbstractFactory/GuiToolkit/: CMakeLists.txt  GuiToolkit.cpp
Creational/Builder/: CMakeLists.txt  README.md
Creational/Builder/Html/: CMakeLists.txt  Html.cpp
Creational/Builder/Meal/: Meal.cpp  (+1 more)
Creational/Factory/: CMakeLists.txt  README.md
Creational/ObjectPool/: CMakeLists.txt  README.md
Creational/Prototype/: CMakeLists.txt  README.md
Creational/Singleton/: README.md
Structural/: CMakeLists.txt
Structural/Adapter/: CMakeLists.txt  README.md
Structural/Bridge/: README.md
Structural/Composite/: CMakeLists.txt  README.md
Structural/Decorator/: README.md
Structural/Facade/: CMakeLists.txt  README.md
Structural/Flyweight/: CMakeLists.txt  README.md
Structural/PrivateClassData/: CMakeLists.txt  README.md
Structural/Proxy/: CMakeLists.txt  README.md
(+24 files in other folders)
